--- a/login.html
+++ b/login.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOGIN</title>
-</head>
-<body>
-    <header>LOGIN</header>
-    
-</body>
+    <style>
+        h1{
+            text-align: center;
+        }
+
+        form{
+            width:20%;
+            margin:0 auto;
+            display: flex;
+            flex-direction: column;
+            gap : 10px;
+        }
+    </style>
+  </head>
+  <body>
+    <header><h1>LOGIN</h1></header>
+    <form>
+      <label for="email">EMAIL</label>
+      <input type="text" name="email" id="email" />
+
+      <label for="psswd">EMAIL</label>
+      <input type="password" name="psswd" id="psswd" />
+
+      <input type="submit" value="LOGIN" id="btnLogin" />
+    </form>
+
+    <script>
+        window.addEventListener("load", ()=>{
+            var btn = document.getElementById("btnLogin");
+        })
+    </script>
+  </body>
 </html>
