--- a/home.html
+++ b/home.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Andada+Pro&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         margin: 0px;
         padding: 0px;
+        font-family: "Andada Pro", serif !important;
+        overflow-x: hidden;
       }
+
       header {
         height: 100px;
         width: 100%;
@@ -24,6 +33,34 @@
       }
       input[type="text"] {
         width: 500px;
+      }
+
+      #container {
+        width: 80%;
+        margin: 50px auto;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+      .imgDiv {
+        width: 80%;
+
+        margin: auto;
+      }
+      .card {
+        width: 40%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid black;
+        padding: 20px;
+      }
+
+      img {
+        max-width: 100%;
       }
     </style>
   </head>
@@ -40,37 +77,70 @@
       </form>
     </header>
 
-    <div class="container"></div>
+    <div id="container"></div>
 
     <script>
       var page = 1;
       var limit = 10;
+      var cont = document.getElementById("container");
 
       window.addEventListener("load", () => {
-        var btn = document.getElementById("search-btn");
+        var btn = document.getElementById("search");
+        createPagination();
         btn.addEventListener("click", () => {
           event.preventDefault();
           handleSearch();
         });
       });
 
+      const createPagination = () => {
+          
+      }
+
       const handleSearch = async () => {
         try {
-          const userName = document.getElementById("user");
-          const res = await getUsers(user, page, limit);
-          console.log(res.items);
+          const userName = document.getElementById("user").value;
+          const res = await getUsers(userName, page, limit);
+          display(res.items);
         } catch (err) {
           console.log(err.message);
         }
       };
 
       const getUsers = (user, page, limit) => {
-          try{
+        console.log(user, page, limit);
+        return fetch(
+          `https://api.github.com/search/users?q=${user}&per_page=${limit}&page=${page}`
+        ).then((response) => response.json());
+      };
 
-          }
-          catch (err) {
-              console.log(err.message);
-          }
+      const display = (items) => {
+        for (const item of items) {
+          var card = createCard(item);
+          cont.append(card);
+        }
+      };
+
+      const createCard = (item) => {
+        const div = document.createElement("div");
+        div.className = "card";
+
+        const imgDiv = document.createElement("div");
+        imgDiv.className = "imgDiv";
+
+        const img = document.createElement("img");
+        img.src = item.avatar_url;
+
+        imgDiv.appendChild(img);
+
+        const h3 = document.createElement("h3");
+        h3.textContent = item.login;
+
+        const h3_2 = document.createElement("h3");
+        h3_2.textContent = item.url;
+
+        div.append(imgDiv, h3, h3_2);
+        return div;
       };
     </script>
   </body>
